@@ -8,6 +8,9 @@ http://www.newbreedsoftware.com/tuxpaint/
 
 
 2004.December.5 (0.9.15)
+  * New smudge tool!
+    Albert Cahalan <albert@users.sf.net>
+
   * Magic blocks effect now gamma-aware and using all 16 (not just 4)
     source pixels.
     Albert Cahalan <albert@users.sf.net>
